fix overflow

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -1,10 +1,14 @@
 .table-component {
   width: 100%;
-  overflow-x: scroll;
   padding: 1rem;
   min-height: 100vh;
   position: relative;
+}
+
+.table-wrapper {
+  width: 100%;
   overflow-x: scroll;
+
 }
 
 .table-component h2 {
